BugFix: Thumbnail url not showing on article cards

--- a/client/src/components/Articles/Articles.styles.sass
+++ b/client/src/components/Articles/Articles.styles.sass
@@ -58,10 +58,14 @@
                 display: flex
                 justify-content: center
                 align-items: flex-start
+                background-size: cover
+                background-repeat: no-repeat
+                background-position: center
                 img
                     height: auto
                     width: 100%
                     background-color: #fff
+                    opacity: 0
             h3
                 font-family: App.$normal-font
                 font-size: 1.4rem
