--- a/client/src/features/readArticle/components/RelatedArticles.styles.sass
+++ b/client/src/features/readArticle/components/RelatedArticles.styles.sass
@@ -21,7 +21,6 @@
         overflow-x: auto
         padding: 10px
         grid-template-columns: max(350px, 25vw)
-        column-gap: 10px
         grid-template-rows: 450px
         grid-auto-flow: column
         grid-auto-columns: max(350px, 25vw)
